<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_label_name"
            android:labelFor="@id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_name" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_label_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:autofillHints="name"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tv_label_phone_number"
            android:labelFor="@id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_phone_number" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_label_phone_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:autofillHints="phone"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/tv_label_gender"
            android:labelFor="@id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_gender"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_label_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent">
            <RadioButton
                android:id="@+id/radio_man"
                android:text="@string/gender_man"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"/>
            <RadioButton
                android:id="@+id/radio_woman"
                android:text="@string/gender_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/rg_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/label_location"/>

        <TextView
            android:id="@+id/tv_location_result"
            tools:text="Lokasi saat ini"
            app:layout_constraintWidth="match_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_location"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/btn_get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_location"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_location_result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_label_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_get_location"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/label_photo"/>

        <Button
            android:id="@+id/btn_upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/img_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/img_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_label_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/image_desc" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_upload_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>