<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/image_desc" />

    <TextView
        android:id="@+id/tv_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_id_peserta"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="001"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_label_id"
        app:layout_constraintLeft_toRightOf="@id/tv_label_id"/>

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/full_names"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_label_name"
        app:layout_constraintLeft_toRightOf="@id/tv_label_name"/>

    <TextView
        android:id="@+id/tv_label_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/us_phones"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_label_phone_number"
        app:layout_constraintLeft_toRightOf="@id/tv_label_phone_number"/>

    <TextView
        android:id="@+id/tv_label_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gender"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_label_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/gender_man"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_label_gender"
        app:layout_constraintLeft_toRightOf="@id/tv_label_gender"/>

    <TextView
        android:id="@+id/tv_label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_label_gender"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Lokasi"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_label_location"
        app:layout_constraintLeft_toRightOf="@id/tv_label_location"/>

</androidx.constraintlayout.widget.ConstraintLayout>